--- a/src/styles.css
+++ b/src/styles.css
@@ -326,6 +326,7 @@ li {
   top: 0;
   left: 0;
   overflow-y: auto;
+  scrollbar-gutter: stable;
 }
 
 .output {
